
[Test/cassette_TestCommand_MoreLockfiles/TestCommand_MoreLockfiles/cabal.project.freeze - 1]
{
  "results": [
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "HSEC-2024-0009",
          "modified": "2025-10-15T13:12:21.549202Z"
        }
      ]
    }
  ]
}

---

[Test/cassette_TestCommand_MoreLockfiles/TestCommand_MoreLockfiles/depsjson - 1]
{
  "results": [
    {},
    {},
    {
      "vulns": [
        {
          "id": "GHSA-4cv2-4hjh-77rx",
          "modified": "2025-01-27T19:00:52.634361Z"
        }
      ]
    },
    {}
  ]
}

---

[Test/cassette_TestCommand_MoreLockfiles/TestCommand_MoreLockfiles/gems.locked - 1]
{
  "results": [
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {
      "vulns": [
        {
          "id": "GHSA-9m3q-rhmv-5q44",
          "modified": "2025-03-13T21:49:32.847007Z"
        }
      ]
    },
    {},
    {
      "vulns": [
        {
          "id": "GHSA-353f-x4gh-cqq8",
          "modified": "2025-07-21T19:42:17.531986Z"
        },
        {
          "id": "GHSA-5w6v-399v-w3cc",
          "modified": "2025-04-21T22:04:45.823585Z"
        },
        {
          "id": "GHSA-mrxw-mxhj-p664",
          "modified": "2025-03-21T15:52:20.761884Z"
        },
        {
          "id": "GHSA-vvfq-8hwr-qm4m",
          "modified": "2025-03-10T22:51:07.538402Z"
        }
      ]
    },
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand_MoreLockfiles/TestCommand_MoreLockfiles/packages.config - 1]
{
  "results": [
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand_MoreLockfiles/TestCommand_MoreLockfiles/packages.lock.json - 1]
{
  "results": [
    {}
  ]
}

---

[Test/cassette_TestCommand_MoreLockfiles/TestCommand_MoreLockfiles/stack.yaml.lock - 1]
{
  "results": [
    {},
    {},
    {},
    {}
  ]
}

---

[Test/cassette_TestCommand_MoreLockfiles/TestCommand_MoreLockfiles/uv.lock - 1]
{
  "results": [
    {},
    {
      "vulns": [
        {
          "id": "GHSA-8qvm-5x2c-j2w7",
          "modified": "2025-06-16T16:27:17.848804Z"
        }
      ]
    }
  ]
}

---
